--- a/deploy.yaml
+++ b/deploy.yaml
@@ -14,6 +14,9 @@ spec:
       containers:
       - name: cachestatic-backend
         image: acoshift/cachestatic-backend:1.0.0
+        env:
+        - name: target
+          value: default-backend
         livenessProbe:
           httpGet:
             path: /
